--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -9,7 +9,7 @@
 }
 
 .navtext {
-  color: #03045e;
+  color: black;
 }
 
 .navborder {
@@ -17,12 +17,12 @@
   font-weight: 600;
   margin-left: auto;
   margin-right: auto;
-  border: solid 2px #03045e;
+  border: solid 2px black;
   border-radius: 10px;
 }
 
 .navborder:hover {
-  background-color: #03045e;
+  background-color: black;
 }
 .navborder:hover .navtext {
   color: white;
