--- a/src/components/navbar.scss
+++ b/src/components/navbar.scss
@@ -1,6 +1,3 @@
-.navbar .menu-item {
-  color: red;
-}
 .navigationbar a {
   text-decoration: none;
   font-size: 20px;
@@ -12,8 +9,8 @@
 .navborder {
   background-color: white;
   font-weight: 600;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 10px;
+  margin-right: 10px;
   border: solid 2px black;
   border-radius: 10px;
 }
@@ -25,8 +22,7 @@
 }
 .navigationbar {
   object-position: center;
-  width: 450px;
-  justify-content: space-between;
+  display: inline-block;
   margin-left: auto;
   margin-right: auto;
 }
