--- a/src/pages/catalog.scss
+++ b/src/pages/catalog.scss
@@ -1,3 +1,13 @@
 // .catalog div.products {
 //   display: inline-flex;
 // }
+.catalog h2 {
+  color: black;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: whitesmoke;
+  margin-top: 3px;
+  border: solid orangered 2px;
+  border-radius: 10px;
+}
