--- a/src/App.scss
+++ b/src/App.scss
@@ -52,9 +52,19 @@
     transform: rotate(360deg);
   }
 }
-h1 {
-  color: black;
-  border-bottom: solid 2px orangered;
+.logo {
+  margin-left: auto;
+  margin-right: auto;
+  background-color: white;
+  margin-top: -60px;
+  border-radius: 50%;
+  margin-bottom: -80px;
+  padding: -3px;
+}
+.logobackground {
+  background: linear-gradient(to bottom, orangered, white);
+  width: 100%;
+  height: 100%;
 }
 body {
   background-color: #aaaaaa;
