--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,9 +1,3 @@
-.navigationbar a {
-  text-decoration: none;
-  font-size: 20px;
-  font-weight: 900;
-}
-
 .navtext {
   color: black;
 }
@@ -19,15 +13,42 @@
 
 .navborder:hover {
   background-color: black;
+  color: white;
 }
 .navborder:hover .navtext {
   color: white;
 }
 
-.navigationbar {
-  -o-object-position: center;
-     object-position: center;
-  display: inline-block;
-  margin-left: auto;
-  margin-right: auto;
+.navbar li {
+  margin-top: 10px;
+}
+
+.navlogoback {
+  background-color: white;
+  border-radius: 50%;
+  width: 150px;
+  height: 100%;
+}
+
+.navbar img {
+  width: 200px;
+  height: 160px;
+  margin-top: -40px;
+  margin-bottom: -50px;
+  margin-right: -30px;
+  margin-left: -30px;
+  border-radius: 50%;
+}
+
+.navbar {
+  background: linear-gradient(to top, #aaaaaa, white 100%);
+}
+
+.navbar form {
+  margin-right: 40px;
+}
+
+.navbar-toggler {
+  margin-right: 40px;
+  background-color: white;
 }/*# sourceMappingURL=navbar.css.map */
