--- a/src/components/product.scss
+++ b/src/components/product.scss
@@ -2,8 +2,8 @@
   display: inline-block;
   border: solid 3px black;
   margin: 10px;
-  height: 330px;
-  width: 200px;
+  height: 450px;
+  width: 400px;
   border-radius: 10px;
   background-color: white;
 }
@@ -14,9 +14,8 @@
 
 .product img {
   border-radius: 10px;
-  border: solid 1px black;
-  width: 150px;
-  height: 150px;
+  width: 300px;
+  height: 250px;
 }
 .product div.costs {
   display: flex;
@@ -26,4 +25,33 @@
   margin-left: 10px;
   margin-right: 10px;
   border-bottom: solid 2px orangered;
+}
+
+// for screens less than 768px
+@media (max-width: 768px) {
+  .product {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    padding-bottom: 10px;
+  }
+  .product img {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+// for screens between 992px and 769px
+@media (min-width: 769px) and (max-width: 992px) {
+  .product {
+    width: 300px;
+    height: 350px;
+    margin: 10px;
+  }
+  .product img {
+    width: 200px;
+    height: 150px;
+  }
 }
