change white 100% -> white

--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -41,7 +41,7 @@
 }
 
 .navbar {
-  background: linear-gradient(to top, #aaaaaa, white 100%);
+  background: linear-gradient(to top, #aaaaaa, white);
 }
 
 .navbar form {
