--- a/src/components/navbar.scss
+++ b/src/components/navbar.scss
@@ -36,7 +36,7 @@
 }
 
 .navbar {
-  background: linear-gradient(to top, #aaaaaa, white 100%);
+  background: linear-gradient(to top, #aaaaaa, white);
 }
 .navbar form {
   margin-right: 40px;
