--- a/src/pages/catalog.css
+++ b/src/pages/catalog.css
@@ -7,4 +7,19 @@
   margin-top: 3px;
   border: solid orangered 2px;
   border-radius: 10px;
+}
+
+.catalog .buttons {
+  display: flex;
+  justify-content: space-between;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.catalog .btn-space {
+  margin-left: 2px;
+  margin-right: 2px;
 }/*# sourceMappingURL=catalog.css.map */
