--- a/src/App.scss
+++ b/src/App.scss
@@ -53,8 +53,8 @@
   }
 }
 .logo {
-  margin-left: auto;
-  margin-right: auto;
+  // margin-left: auto;
+  // margin-right: auto;
   background-color: white;
   margin-top: -60px;
   border-radius: 50%;
@@ -68,4 +68,24 @@
 }
 body {
   background-color: #aaaaaa;
+}
+@media screen and (max-width: 768px) {
+  body {
+    width: 100%;
+  }
+  .logo {
+    width: auto;
+    height: auto;
+  }
+  .logobackground {
+    width: auto;
+  }
+}
+@media screen and (max-width: 393px) {
+  .logo {
+    display: none;
+  }
+  .logobackground {
+    width: 100%;
+  }
 }
