--- a/src/components/product.css
+++ b/src/components/product.css
@@ -53,4 +53,18 @@
     width: 200px;
     height: 150px;
   }
+}
+@media screen and (max-width: 370px) {
+  .product {
+    width: 80%;
+    height: 80%;
+    margin: 0;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    padding-bottom: 10px;
+  }
+  .product img {
+    width: 100%;
+    height: 100%;
+  }
 }/*# sourceMappingURL=product.css.map */
