--- a/src/components/product.scss
+++ b/src/components/product.scss
@@ -55,3 +55,17 @@
     height: 150px;
   }
 }
+@media screen and (max-width: 370px) {
+  .product {
+    width: 80%;
+    height: 80%;
+    margin: 0;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    padding-bottom: 10px;
+  }
+  .product img {
+    width: 100%;
+    height: 100%;
+  }
+}
