--- a/src/pages/cart.scss
+++ b/src/pages/cart.scss
@@ -1,4 +1,4 @@
-.about h1 {
+.cart h1 {
   color: black;
   width: 80%;
   margin-left: auto;
@@ -9,28 +9,48 @@
   border-radius: 10px;
 }
 
-.about h3 {
+.cart h2 {
   color: black;
   width: 80%;
   margin-left: auto;
   margin-right: auto;
-  background-color: whitesmoke;
+  background-color: white;
   margin-top: 3px;
   border-bottom: solid orangered 2px;
   border-radius: 10px;
+  text-transform: uppercase;
 }
-
-.about h2 {
+.cart h3 {
   color: black;
   width: 80%;
   margin-left: auto;
   margin-right: auto;
-  background-color: whitesmoke;
+  background-color: white;
   margin-top: 3px;
   border-bottom: solid orangered 2px;
   border-radius: 10px;
 }
-
-.about button {
+.cart img {
+  width: 200px;
+  height: 200px;
+}
+.cart li {
+  margin-top: 20px;
   margin-bottom: 20px;
-}/*# sourceMappingURL=about.css.map */
+  margin-left: 20px;
+  margin-right: 20px;
+  border: solid black 3px;
+  border-radius: 10px;
+  background-color: white;
+}
+.cart ul {
+  list-style: none;
+}
+.cart .flex {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.cart .flex-child {
+  align-items: center;
+}
