--- a/src/components/navbar.scss
+++ b/src/components/navbar.scss
@@ -9,6 +9,9 @@
   border: solid 2px black;
   border-radius: 10px;
 }
+#form-cart {
+  padding: 10px;
+}
 .navborder:hover {
   background-color: black;
   color: white;
@@ -18,6 +21,7 @@
 }
 .navbar li {
   margin-top: 10px;
+  list-style: none;
 }
 .navlogoback {
   background-color: white;
