--- a/src/pages/about.scss
+++ b/src/pages/about.scss
@@ -1,7 +1,33 @@
-.about h3 {
-  color: chartreuse;
+.about h1 {
+  color: black;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: whitesmoke;
+  margin-top: 3px;
+  border: solid orangered 2px;
+  border-radius: 10px;
 }
-
+.about h3 {
+  color: black;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: whitesmoke;
+  margin-top: 3px;
+  border-bottom: solid orangered 2px;
+  border-radius: 10px;
+}
+.about h2 {
+  color: black;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: whitesmoke;
+  margin-top: 3px;
+  border-bottom: solid orangered 2px;
+  border-radius: 10px;
+}
 .about button {
   margin-bottom: 20px;
 }
