--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -1,5 +1,12 @@
 .home h1 {
-  color: blue;
+  color: black;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: whitesmoke;
+  margin-top: 3px;
+  border: solid orangered 2px;
+  border-radius: 10px;
 }
 
 .home .link {
